# Master-Portfolio

./: README.md
Projects/Clue/doc/: File structure Ideal (delete me when done)
Projects/Clue/src/engine/: cards.py  deck.py  game_state.py  turn_manager.py
Projects/Clue/src/players/: base_player.py  human_player.py
Projects/Clue2/: .gitignore  README.md  app.py  bot.py  cards.py  cleanup-reports.md  game.py  knowledge_base.py  main.py  pyproject.toml  simulate.py  simulate_quick.py
Projects/Clue2/clue_game/: __init__.py  app.py  bot.py  cards.py  game.py  knowledge_base.py  state_tracker.py
Projects/Clue2/docs/: README.md  architecture-spec.md  clue-bot-engineering-spec.md  features-spec.md  propositional-logic-spec.md
Projects/Clue2/engine/: __init__.py  bot.py  cards.py  game.py  knowledge_base.py  opponent_model.py  state_tracker.py
Projects/Clue2/tests/: test_bot.py  test_game.py  test_knowledge_base.py  test_simulation.py
Projects/Clue2/ui/: __init__.py  app.py
